--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,12 @@
       font-family: 'VT323', monospace;
       color: #F2F2F2;
     }
+    h3 {
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      color: #F2F2F2;
+      align-content: center;
+      font-size: 16px;
+    }
 
     body {
       background-color: #038C7F;
@@ -14,41 +20,36 @@
     }
 
     p {
-      color: #05F2DB;
-      text-align: center;
+      color: #F2F2F2;
+      text-align: left;
       font-size: 17px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
+      padding: 40px;
     }
 
-    .topnav {
-      padding: 30px;
-      overflow: hidden;
-      width: 100%;
-      font-family: font-family: 'VT323', monospace;
-      overflow: hidden;
-    }
+.container {
+    height: 300px;
+    width: 80%;
+    background: #02756a;
+    margin: 10px auto;
+    position: relative;
+    padding: 10px;
+}
 
-    .topnav a {
-      float: top;
-      color: #05F2DB;
-      text-align: center;
-      padding: 100px;
-      font-size: 22px;
-    }
+.container2 {
+  height: 2500px;
+    width: 80%;
+    background: #02756a;
+    margin: 10px auto;
+    position: relative;
 
-    .topnav a:hover {
-      color: #430161;
-    }
-
-    .topnav a.active {
-      color: #F2F2F2;
-    }
+}
 
     .block1 {
       float: left;
       width: 300px;
       height: 300px;
-      padding: 10px 10px 10 px 10 px;
+      padding: 10px 10px 10px 10px;
       display: inline-block;
       background-color: #F25835;
       text-align: center;
@@ -62,7 +63,7 @@
       float: center;
       width: 300px;
       height: 300px;
-      padding: 10px 10px 10 px 10 px;
+      padding: 10px 10px 10px 10px;
       display: inline-block;
       background-color: #F25835;
       text-align: center;
@@ -76,7 +77,7 @@
       float: right;
       width: 300px;
       height: 300px;
-      padding: 10px 10px 10 px 10 px;
+      padding: 10px 10px 10px 10px;
       display: inline-block;
       background-color: #F25835;
       text-align: center;
@@ -85,6 +86,33 @@
       box-shadow: -6px 6px #05F2DB;
       overflow: hidden;
     }
+    .block4 {
+      float: left;
+      width: 300px;
+      height: 300px;
+      padding: 10px 0px 10px 10px;
+      display: inline-block;
+      background-color: #F25835;
+      text-align: center;
+      margin: 40px 10px 10px 250px;
+      cursor: pointer;
+      box-shadow: -6px 6px #05F2DB;
+      overflow: hidden;
+    }
+    .block5 {
+      float: center;
+      width: 300px;
+      height: 300px;
+      padding: 10px 10px 10px 0px;
+      display: inline-block;
+      background-color: #F25835;
+      text-align: center;
+      margin: 40px 10px 10px -210px;
+      cursor: pointer;
+      box-shadow: -6px 6px #05F2DB;
+      overflow: hidden;
+    }
+    
 
     .section-1 {
       padding: 10px 10px 10px 10px;
@@ -100,4 +128,81 @@
       box-shadow: -6px 6px #05F2DB;
       overflow: hidden;
     }
+    img {
+      border-radius: 100px;
+      height: 200px;
+      width: 200px;
+      box-shadow: -6px 6px #05F2DB;
+      overflow: hidden;
+      background-color: yellow;
+    }
+
+    body {
+      font-family: 'VT323', monospace;
+      font-size: 22px;
+    }
+    
+    .navbar {
+      overflow: hidden;
+      background-color: #F2F2F2;
+      box-shadow: -6px 6px #05F2DB;
+      font-size: 22px;
+    }
+    
+    .navbar a {
+      float: left;
+      font-size: 22px;
+      color: #430161;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    
+    .dropdown {
+      float: left;
+      overflow: hidden;
+    }
+    
+    .dropdown .dropbtn {
+      font-size: 22px;  
+      border: none;
+      outline: none;
+      color: #430161;
+      padding: 14px 16px;
+      background-color: inherit;
+      font-family: 'VT323', monospace;
+      margin: 0;
+    }
+    
+    .navbar a:hover, .dropdown:hover .dropbtn {
+      background-color: #F25835;
+    }
+    
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: -6px 6px #05F2DB;
+      z-index: 1;
+    }
+    
+    .dropdown-content a {
+      float: none;
+      color: #430161;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
+    
+    .dropdown-content a:hover {
+      background-color: #ddd;
+    }
+    
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+ 
+
 
