--- a/styles/style.css
+++ b/styles/style.css
@@ -13,10 +13,17 @@
       align-content: center;
       font-size: 16px;
     }
+    h4 {
+      font-family: 'VT323', monospace;
+      font-size: 26px;
+      text-align: left;
+
+    }
 
     body {
       background-color: #038C7F;
       text-align: center;
+    
     }
 
     p {
@@ -28,12 +35,12 @@
     }
 
 .container {
-    height: 300px;
+    height: 200px;
     width: 80%;
     background: #02756a;
     margin: 10px auto;
     position: relative;
-    padding: 10px;
+    padding: 20px;
 }
 
 .container2 {
@@ -47,8 +54,8 @@
 
     .block1 {
       float: left;
-      width: 300px;
-      height: 300px;
+      width: 200px;
+      height: 200px;
       padding: 10px 10px 10px 10px;
       display: inline-block;
       background-color: #F25835;
@@ -61,8 +68,8 @@
 
     .block2 {
       float: center;
-      width: 300px;
-      height: 300px;
+      width: 200px;
+      height: 200px;
       padding: 10px 10px 10px 10px;
       display: inline-block;
       background-color: #F25835;
@@ -75,8 +82,8 @@
 
     .block3 {
       float: right;
-      width: 300px;
-      height: 300px;
+      width: 200px;
+      height: 200px;
       padding: 10px 10px 10px 10px;
       display: inline-block;
       background-color: #F25835;
@@ -86,33 +93,6 @@
       box-shadow: -6px 6px #05F2DB;
       overflow: hidden;
     }
-    .block4 {
-      float: left;
-      width: 300px;
-      height: 300px;
-      padding: 10px 0px 10px 10px;
-      display: inline-block;
-      background-color: #F25835;
-      text-align: center;
-      margin: 40px 10px 10px 250px;
-      cursor: pointer;
-      box-shadow: -6px 6px #05F2DB;
-      overflow: hidden;
-    }
-    .block5 {
-      float: center;
-      width: 300px;
-      height: 300px;
-      padding: 10px 10px 10px 0px;
-      display: inline-block;
-      background-color: #F25835;
-      text-align: center;
-      margin: 40px 10px 10px -210px;
-      cursor: pointer;
-      box-shadow: -6px 6px #05F2DB;
-      overflow: hidden;
-    }
-    
 
     .section-1 {
       padding: 10px 10px 10px 10px;
@@ -122,19 +102,11 @@
     }
 
     img {
-      border-radius: 100px;
+      border-radius: none;
       height: 200px;
       width: 200px;
       box-shadow: -6px 6px #05F2DB;
       overflow: hidden;
-    }
-    img {
-      border-radius: 100px;
-      height: 200px;
-      width: 200px;
-      box-shadow: -6px 6px #05F2DB;
-      overflow: hidden;
-      background-color: yellow;
     }
 
     body {
