--- a/styles/style.css
+++ b/styles/style.css
@@ -41,11 +41,11 @@ h1 {
       text-align: left;
 
     }
-
-    body {
-      background-color: #038C7F;
-      text-align: center;
-    
+    @media only screen and (max-width: 600px) {
+      body {
+        background-color: lightblue;
+        text-align: center;
+      }
     }
 
     p {
