--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,30 @@
 
 } */
 
-@media only screen 
+/* @media only screen 
   and (min-device-width: 768px) 
   and (max-device-width: 1024px) 
   and (orientation: portrait) 
   and (-webkit-min-device-pixel-ratio: 1) {
     
-  }
+  } */
   
-  @media screen 
+  /* @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) { 
-  }
+  } */
 
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    body {
+      background-color: rgb(255, 119, 119);
+    }
+    
+  }
   @media only screen and (min-device-width: 320px) {
     body {
       background-color: lightblue;
