--- a/styles/style.css
+++ b/styles/style.css
@@ -21,10 +21,7 @@
   } */
 
   @media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1) {
+  and (min-device-width: 768px) {
     body {
       background-color: rgb(255, 119, 119);
     }
