--- a/styles/style.css
+++ b/styles/style.css
@@ -30,11 +30,17 @@
   @media only screen and (min-device-width: 320px) {
     body {
       background-color: lightblue;
-      text-align: center;
-      font-family: 'VT323', monospace;
-      font-size: 22px;
+
     }
   }
+  body {
+    background-color: #02756a;
+    text-align: center;
+    font-family: 'VT323', monospace;
+    font-size: 22px;
+  }
+
+  
 
 h1 {
       font-family: 'VT323', monospace;
