--- a/styles/style.css
+++ b/styles/style.css
@@ -20,8 +20,7 @@
   and (-webkit-min-device-pixel-ratio: 1) { 
   } */
 
-  @media only screen 
-  and (min-device-width: 768px) {
+  @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
     body {
       background-color: rgb(255, 119, 119);
     }
@@ -71,11 +70,6 @@ h1 {
       padding: 40px;
     }
 
-    @media only screen 
-    and (min-device-width: 375px) 
-    and (max-device-width: 667px) 
-    and (-webkit-min-device-pixel-ratio: 2)
-    and (orientation: portrait) { 
     .container {
         height: 200px;
         width: 80%;
@@ -84,8 +78,6 @@ h1 {
         position: relative;
         padding: 20px;
     }
-
-}
 
 .container2 {
   height: 2500px;
